# CG-Spider-2D

./: .gitignore  Aranha2D  CMakeLists.txt  README.md
includes/: matrix.h  spider.h  types.h
src/: compile  main  main.cpp  matrix.cpp  spider.cpp  type.cpp
